src/main/resources/jira/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jira
spec:
  selector:
    matchLabels:
      app: jira
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jira
    spec:
      containers:
        - image: domaindrivenarchitecture/c4k-jira
          name: jira-app
          imagePullPolicy: IfNotPresent
          command: ["/app/entrypoint.sh"]
          volumeMounts:
            - mountPath: /var/jira
              name: jira-data-volume
            - name: postgres-secret-volume
              mountPath: /var/run/secrets/postgres-secret
              readOnly: true
      volumes:
        - name: jira-data-volume
          persistentVolumeClaim:
            claimName: jira-pvc
        - name: postgres-secret-volume
          secret:
            secretName: postgres-secret
