src/main/resources/jira/pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: jira-app
  labels:
    app: jira
spec:
  containers:
    - image: domaindrivenarchitecture/c4k-jira
      name: jira-app
      imagePullPolicy: IfNotPresent
      command: ["/app/entrypoint.sh"]
      volumeMounts:
        - mountPath: /var/jira
          name: jira-data-volume
        - name: postgres-secret-volume
          mountPath: /var/run/secrets/postgres-secret
          readOnly: true
  volumes:
    - name: jira-data-volume
      persistentVolumeClaim:
        claimName: jira-pvc
    - name: postgres-secret-volume
      secret:
        secretName: postgres-secret
