src/main/resources/jira/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-service
spec:
  selector:
    app: jira
  ports:
    - port: 8080
