src/main/resources/jira/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-jira
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
  namespace: default
spec:
  tls:
  - hosts:
    - fqdn
    secretName: jira-secret
  rules:
    - host: fqdn
      http:
        paths:
          - path: /
            backend:
              serviceName: jira-service
              servicePort: 8080
